--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "HaiTv",
   "short_name": "HaiTv",
-  "id": "com.HaiTv.app",
+  "id": "com.HaiTv.HaldarAi",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#000000",
@@ -9,7 +9,7 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "/favicon.png",
+      "src": "https://i.ibb.co/wrs2F1WD/Picsart-25-11-20-16-28-11-712.png",
       "sizes": "512x512",
       "type": "image/png"
     }
